--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+# PostgresSQL Server 12 Database
+spring.datasource.url=jdbc:postgresql://localhost:5432/veterinariasystem?currentSchema=public
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 
+# Show or not log for each sql query
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Hibernate ddl auto (none, validate, create, create-drop, update)
+spring.jpa.hibernate.ddl-auto=create-drop
+
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgresPlusDialect
+
+# Configuring of the application
+#springdoc.swagger-ui.path=/swagger-ui.html
+#springdoc.api-docs.path=/api-docs
+server.port=8886
